# wamalama

./: Cargo.toml
crates/waml/: Cargo.toml
crates/waml/src/: lib.rs  wasmir.rs
crates/wamlc/: Cargo.toml
crates/wmla/: Cargo.toml
crates/wmla/src/: lib.rs  wasmir.rs
crates/wmla_grammar/: .gitignore  Cargo.toml  build.rs  test.txt  wmla_grammar.par
crates/wmla_grammar/src/: lib.rs  main.rs  wmla_grammar_grammar.rs
crates/wmlac/: Cargo.toml
