[workspace]
resolver = "2"

members = [
  "crates/*",
]

default-members = [
  "crates/wamlc",
]

[workspace.dependencies.rustx]
path = "../rustx/crates/rustx"
default-features = false
features = [
  "rx-feature-std",
  "anyhow",
  "extension-trait",
]

# For faster builds.
[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3

