[package]
name = "wmla_grammar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
thiserror.workspace = true
parol_runtime = { version = "0.14.0", features = ["auto_generation"] }

[build-dependencies]
parol = "0.18.1"
parol_runtime = { version = "0.14.0", features = ["auto_generation"] }
